# haohaohao

./: .gitignore  CMakeLists.txt  CMakePresets.json  ChiikawaLaser.aip  ping_baidu_every_5min.ps1  vcpkg.json
RTC6/: RTC6DLL.lib  RTC6DLLx64.lib  RTC6Import.pas
apps/laser_cam_qt/: CMakeLists.txt  app_resources.qrc  application_controller.cpp  application_controller.h  grpc_client.cpp  grpc_client.h  laser_cam_qt.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model_view.cpp  model_view.h  parameter_panel.cpp  parameter_panel.h  path_preview.cpp  path_preview.h  plane_pose_widget.cpp  plane_pose_widget.h  qt.conf  svg_raster_cache.cpp  svg_raster_cache.h  texture_details_dialog.cpp  texture_details_dialog.h  texture_editor_dialog.cpp  texture_editor_dialog.h  texture_list_widget.cpp  texture_list_widget.h  uv_view.cpp  uv_view.h
core/: CMakeLists.txt
core/executor/: CMakeLists.txt  board_executor.cpp  board_executor.h  data_buffer.cpp  data_buffer.h  data_generator.cpp  data_generator.h  executor_interface.h  five_axis.proto  frame_log_utils.cpp  frame_log_utils.h  grpc_service.cpp  grpc_service.h  rtc6_executor.cpp  rtc6_executor.h  tcp_socket.cpp  tcp_socket.h
core/job/: CMakeLists.txt  json_serializer.cpp  json_serializer.h  laser_job.cpp  laser_job.h  serializer.cpp  serializer.h
core/mapping/: CMakeLists.txt  uv_mapper.cpp  uv_mapper.h
core/mesh/: CMakeLists.txt  mesh_accelerator.cpp  mesh_accelerator.h  mesh_io.cpp  mesh_io.h  mesh_preprocessor.cpp  mesh_preprocessor.h  patch_clusterer.cpp  patch_clusterer.h
core/param/: CMakeLists.txt  abf_parameterizer.cpp  abf_parameterizer.h  arap_parameterizer.cpp  arap_parameterizer.h  authalic_parameterizer.cpp  authalic_parameterizer.h  cgal_mesh_utils.h  lscm_parameterizer.cpp  lscm_parameterizer.h  parameterizer_interface.h  patch_parameterizer.cpp  patch_parameterizer.h
core/pattern/: CMakeLists.txt  contour_strategy.cpp  contour_strategy.h  fill_strategy_interface.h  hatch_strategy.cpp  hatch_strategy.h  line_hatch_strategy.cpp  line_hatch_strategy.h  nanosvg_wrapper.cpp  nanosvg_wrapper.h  ring_fill_strategy.cpp  ring_fill_strategy.h  svg_to_uv_mapper.cpp  svg_to_uv_mapper.h
core/planner/: CMakeLists.txt  path_planner.cpp  path_planner.h
core/process/: CMakeLists.txt  curvature_model.cpp  curvature_model.h  process_model_interface.h
docs/: 0313待补充new.docx  a.txt  a_visio_flowchart.vsdx  a_visio_flowchart_description.md  architecture.md  build_guide.md  cgal_parameterization.md  data_format_laser_job.md  dcj中期报告.docx  development_log_2.md  generate_a_visio_flowchart.ps1  hust-0.1mm.csv  hust-contour.csv  iii.txt  jjj.txt  model.stl  model1111.STL  patch_clustering_and_svg_mapping.md  patch_logic.cpp  project_status.md  prompt.txt  software_architecture_guide.md  svg-contour.csv  ui_integration_summary.md  vtk_integration.md  中期模板.docx  后续开发信息.txt  圆弧往返填充_伪代码.docx  开发需求2.txt  开发需求3.txt  开发需求3_实现思路.md  控制卡数据帧总结_三轴五轴.md  输出-生成.txt
fpga/sbhust1/: dcj.xsa  design_1_wrapper.xsa  sbhust.xpr  vivado.jou  vivado_17312.backup.jou
fpga/sbhust1/2023_0905/: 1.1_xy5_100.v  2023_0905.xdc  端口定义.xlsx
fpga/sbhust1/sbhust.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  project.wpc  synthesis.wdf  webtalk_pa.xml
fpga/sbhust1/sbhust.hw/hw_1/: hw.xml
fpga/sbhust1/sbhust.runs/.jobs/: vrs_config_13.xml  vrs_config_17.xml  vrs_config_2.xml  vrs_config_39.xml  vrs_config_8.xml
fpga/sbhust1/sbhust.runs/clk_wiz_0_synth_1/: .vivado.begin.rst  clk_wiz_0.dcp  clk_wiz_0.tcl  clk_wiz_0.vds  clk_wiz_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  project.wdf  runme.sh  vivado.jou  vivado.pb
fpga/sbhust1/sbhust.runs/impl_1/: .phys_opt_design.begin.rst  .vivado.begin.rst  .write_bitstream.begin.rst  design_1_wrapper.bit  design_1_wrapper.hwdef  design_1_wrapper.tcl  design_1_wrapper.vdi  design_1_wrapper_24140.backup.vdi  design_1_wrapper_8856.backup.vdi  design_1_wrapper_bus_skew_routed.rpt  design_1_wrapper_bus_skew_routed.rpx  design_1_wrapper_clock_utilization_routed.rpt  design_1_wrapper_control_sets_placed.rpt  design_1_wrapper_drc_opted.rpt  design_1_wrapper_drc_opted.rpx  design_1_wrapper_drc_routed.rpt  design_1_wrapper_drc_routed.rpx  design_1_wrapper_io_placed.rpt  design_1_wrapper_methodology_drc_routed.pb  design_1_wrapper_methodology_drc_routed.rpt  design_1_wrapper_methodology_drc_routed.rpx  design_1_wrapper_opt.dcp  design_1_wrapper_physopt.dcp  design_1_wrapper_placed.dcp  design_1_wrapper_power_routed.rpt  design_1_wrapper_power_routed.rpx  design_1_wrapper_power_summary_routed.pb  design_1_wrapper_route_status.pb  design_1_wrapper_route_status.rpt  design_1_wrapper_routed.dcp  design_1_wrapper_timing_summary_routed.pb  design_1_wrapper_timing_summary_routed.rpt  design_1_wrapper_timing_summary_routed.rpx  design_1_wrapper_utilization_placed.pb  design_1_wrapper_utilization_placed.rpt  gen_run.xml  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  (+10 more)
fpga/sbhust1/sbhust.runs/synth_1/: .vivado.begin.rst  design_1_wrapper.dcp  design_1_wrapper.tcl  design_1_wrapper.vds  design_1_wrapper_utilization_synth.pb  design_1_wrapper_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
fpga/sbhust2/: .analytics  design_1_wrapper_1.xsa
fpga/sbhust2/dmalwip/: .cproject  .project  dmalwip.prj
fpga/sbhust2/dmalwip/Debug/: dmalwip.elf  dmalwip.elf.size  makefile  objects.mk  sources.mk
fpga/sbhust2/dmalwip/_ide/: hwspec.checksum
fpga/sbhust2/dmalwip/src/: common.cc  common.h  lscript.ld  main.cc
fpga/sbhust2/dmalwip_system/: .cproject  .project  dmalwip_system.sprj
fpga/sbhust2/dmalwip_system/Debug/: makefile  system.bif
fpga/sbhust2/tsktcp/: .cproject  .project  platform.spr  platform.tcl
fpga/sbhust2/tsktcp/hw/: design_1_wrapper_2.xsa
reference/: DataBuffer.cs  DataGenerator.cs  FiveAxisService.cs  NBCAM_开发文档.md  NBCAM_用户手册.md  TcpSocket.cs  five_axis.proto  基于纹理映射的复杂曲面激光加工CAM软件系统研究与实现_论文初稿.md  曲面变参数加工数学模型.md  校正模块重设计方案.md  课题中期进展报告.md
scripts/: cleanup_dlls.ps1  note.txt  package_laser_cam.ps1
(+285 files in other folders)
